Fixed gap in gride

--- a/portfolio-style.css
+++ b/portfolio-style.css
@@ -442,7 +442,7 @@ input[type="checkbox"].toggle:checked + label::after {
     -10px 0 1rem -10px rgb(243, 182, 5);
 
     grid-column: 1;
-    grid-row: 2/4;
+    grid-row: 2/3;
 }
 
 #card-gdsc h1, #card-gdsc h4 {
